--- a/instagram/app/src/main/res/values/strings.xml
+++ b/instagram/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="enter_with_facebook">Entrar com o Facebook</string>
     <string name="does_not_have_account">Não tem uma conta? <b><font color="#000000">Cadastre-se.</font></b></string>
     <string name="already_has_account">Já tem uma conta? <b><font color="#000000">Faça login.</font></b></string>
+    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="action_settings">Settings</string>
     <string name="next">Avançar</string>
